--- a/src/Component/FooterSection/Footer.css
+++ b/src/Component/FooterSection/Footer.css
@@ -1,7 +1,7 @@
 
 .footer-part{
     width: 100%;
-    height:400px;
+    height:450px;
     background:#415f77;
 }
 .f-part{
@@ -26,6 +26,9 @@ li a{
 a{
     margin: 10px;
 }
+li a:hover{
+    color:black;
+}
 h2{
     color: #fc5050;
     /* margin-left:100px;
@@ -44,6 +47,7 @@ footer {
     /* color:#fc5050; */
     padding: 0.4em;
     background: #fc5050;
+    
 }
 footer a{
     color:black;
