--- a/src/Component/HomeSection/Home.css
+++ b/src/Component/HomeSection/Home.css
@@ -21,7 +21,9 @@ p{
     width: 100%;
     height:300px;
     background-size: cover;
+    background-repeat: no-repeat;
     /* margin-left: 50px;
     margin-right: 50px; */
     /* margin-left: 300px; */
+    /* object-fit: contain; */
 }
