--- a/src/Component/NavSection/Navbar.css
+++ b/src/Component/NavSection/Navbar.css
@@ -22,6 +22,7 @@ nav{
     padding-right: 5%;
     position: sticky;
     top:0;
+    width: 100%;
    
 
 }
@@ -40,6 +41,7 @@ nav ul li a {
     /* font-weight:bold; */
     font-size: 16px;
     font-family: poppins;
+   
 
 }
 
