--- a/src/Component/ProductSection/Products.css
+++ b/src/Component/ProductSection/Products.css
@@ -2,27 +2,24 @@
 .container{
 width: 100%;
 height:70px;
+position: sticky;
+top:0;
 }
 .btn-part{
     display:flex;
     justify-content: center;
     /* margin-bottom: 20px; */
     /* margin-top: 40px; */
-
-
 }
 .btn2{
-    background:#415f77;
+    /* background:#415f77; */
+    background: #101820FF;
     color: white;
     padding:10px;
     margin:5px;
     cursor: pointer;
     margin-bottom: 10px;
     /* width:150px; */
-    
-    
-
-   
 }
 .card-body h5{
     color: black;
@@ -41,7 +38,14 @@ height:70px;
    
 }
 .card-img-top{
-    height:100px;
+    height:200px;
+    /* width: 500px; */
+    /* width:700px; */
+    border: 0px solid red;
+    border-radius: 15px;
+    width:300px;
+    margin:10px;
+    
 }
 .head-part{
     /* text-align: center; */
@@ -49,3 +53,22 @@ height:70px;
     font-weight: bold;
     font-family: 'poppins';
 }
+.card-body{
+    width:300px;
+    /* height:100px; */
+    border-radius: 20px;
+}
+.card{
+box-sizing: border-box;
+border-radius: 20px;
+border: 2px solid black;
+box-sizing: border-box;
+box-shadow:10px 10px 10px;
+}
+.col-md-3{
+    background:  #FCE7CC;
+    
+}
+/* .col-md-3 card{
+    width:100%;
+} */
