--- a/src/Component/FooterSection/Footer.css
+++ b/src/Component/FooterSection/Footer.css
@@ -2,7 +2,8 @@
 .footer-part{
     width: 100%;
     height:450px;
-    background:#415f77;
+    /* background:#415f77; */
+    background: #101820FF;
 }
 .f-part{
 
@@ -27,16 +28,18 @@ a{
     margin: 10px;
 }
 li a:hover{
-    color:black;
+    color:#F2AA4CFF;
 }
 h2{
-    color: #fc5050;
+    /* color: #fc5050; */
+    color: #F2AA4CFF;
     /* margin-left:100px;
     margin-right:100px; */
    
 }
 .follow{
-    color:#fc5050;
+    /* color:#fc5050; */
+    color: #F2AA4CFF;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
@@ -46,7 +49,8 @@ footer {
     font-size: 18px;
     /* color:#fc5050; */
     padding: 0.4em;
-    background: #fc5050;
+    /* background: #fc5050; */
+    background: #F2AA4CFF;
     
 }
 footer a{
