--- a/src/Component/HomeSection/Home.css
+++ b/src/Component/HomeSection/Home.css
@@ -1,9 +1,11 @@
 .home-container{
  width: 100%;
- height: 800px;
+ height: 2500px;
  border: 1px solid rgb(17, 0, 0);
- background: #d1e9ea;
+ /* background: #d1e9ea; */
+ background: #FCE7CC;
  /* display: flex; */
+ 
 }
 h1{
     text-align: center;
@@ -16,10 +18,12 @@ p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 30px;
 
+
 }
+.p-new{ text-align: center;}
 .bg-part{
     width: 100%;
-    height:300px;
+    height:500px;
     background-size: cover;
     background-repeat: no-repeat;
     /* margin-left: 50px;
@@ -27,3 +31,7 @@ p{
     /* margin-left: 300px; */
     /* object-fit: contain; */
 }
+/* .below-bg{
+    display: flex;
+    justify-content: flex-end;
+} */
