--- a/src/Component/NavSection/Navbar.css
+++ b/src/Component/NavSection/Navbar.css
@@ -7,7 +7,8 @@
 .nav-box{
     height: 60px;
     width: 100%;
-    background: #415f77;
+    /* background: #415f77; */
+    background: #101820FF;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.03);
     position: sticky;
     top:0;
@@ -44,7 +45,9 @@ nav ul li a {
    
 
 }
-
+nav ul li a:hover{
+    color:#A44B10;
+}
 .right-nav a {
     padding: 10px;
     text-decoration: none;
@@ -56,6 +59,9 @@ nav ul li a {
     font-size: 18px;
     
 
+}
+.right-nav a:hover{
+    color:#A44B10;
 }
 .nav-img {
     height:40px;
